# invoice-parser

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  DEPLOY_DEBUG.md  Dockerfile  Dockerfile.cloudflare  README.md  TATR_IMPLEMENTATION.md  TECHNICAL_OVERVIEW.md  app.py  cloudbuild.yaml  create_sample_invoices.py  docker-compose.yml  download_model.py  package.json  pyproject.toml  test_verifactu.py  tsconfig.json  wrangler.jsonc
.github/workflows/: build-and-push.yml  deploy-cloudflare.yml
app/: server.py  settings.py
app/rest/: health.py  models.py  router.py
app/rest/parser/: parser.py
app/rest/verifactu/: __init__.py  models.py
app/services/: prompts.py
app/services/classifier/: classifier.py
app/services/ocr/: __init__.py  hybrid_parser.py
app/services/parser/: __init__.py  parser.py  ultra_fast_parser.py
app/services/preprocessing/: __init__.py  image_processor.py
app/services/security/: token.py
app/services/validation/: __init__.py  file_validator.py  invoice_validator.py  spain_validators.py
app/services/verifactu/: aeat_integration.py  auto_correction.py  dashboard.py  format_validator.py  phrase_validator.py  qr_validator.py
app/ui/: app.py
backend/: .env.example  CLAUDE.md  Dockerfile  __init__.py  app.py  cloudbuild-lightning.yaml  cloudbuild.yaml  full_response.txt  generate_token.py  pyproject.toml  test_response.txt
backend/api/: health.py
backend/api/endpoints/: __init__.py  upload_and_parse.py
backend/api/invoice_endpoints/: upload_and_parse.py
backend/api/security/: jwt_auth.py
backend/app/: server.py  settings.py
backend/app/rest/: router.py
backend/app/rest/parser/: docs.py  parser.py
backend/app/rest/verifactu/: verifactu.py
backend/app/services/: document_utils.py  preprocessing.py
backend/app/services/cache/: __init__.py  cache.py  strategies.py
backend/app/services/classifier/: __init__.py  models.py
backend/app/services/ocr/: donut_engine.py
backend/app/services/parser/: __init__.py  lightning_parser.py  models.py  parser.py  ultra_fast_parser.py
backend/app/services/security/: __init__.py  auth.py
backend/app/services/validation/: spain_validators.py
backend/app/services/verifactu/: __init__.py  auto_correction.py  config.py  format_validator.py  models.py  registro_facturacion.py  verifactu_validator.py
backend/app/ui/: app.py
backend/backend/: generate_token.py
backend/configuration/: app_settings.py
backend/invoice_processing/ai_services/: __init__.py  donut_processor.py  gemini_processor.py  paddle_processor.py  surya_processor.py
backend/invoice_processing/ai_services/gemini/: __init__.py  gemini_client.py  prompts.py
backend/invoice_processing/ai_services/gemini_engines/: __init__.py  gemini_client.py  invoice_parser.py  prompts.py
backend/invoice_processing/ai_services/ocr_engines/: __init__.py  donut_model.py  donut_output_parser.py  pdf_converter.py
backend/invoice_processing/ai_services/paddle_ocr/: __init__.py  config.py  image_handler.py  image_preprocessor.py  image_quality_detector.py  ocr_executor.py  processor.py  provider.py  table_processor.py
backend/invoice_processing/caching/: __init__.py  redis_cache.py
backend/invoice_processing/classification/: __init__.py  document_classifier.py
backend/invoice_processing/models/: __init__.py  invoice_data.py
backend/invoice_processing/parsing/: __init__.py  invoice_corrector.py  invoice_pipeline.py  multi_mode_processor.py  pdf_to_data.py
backend/invoice_processing/utilities/: document_utils.py  invoice_builder.py
backend/invoice_processing/validation/: __init__.py  invoice_checker.py
backend/scripts/: cache_models.py  clear_cache.py
docs/: API_DOCUMENTATION.md  CLEAN_ARCHITECTURE.md  COMPLETE_FUNCTIONALITY_RESTORED.md  FINAL_CLEAN_STRUCTURE.md  TOKEN_MANAGEMENT.md
frontend/: .env.local  Dockerfile  PRODUCTION-READY.md  README-DEPLOYMENT.md  app.tsx  package-lock.json  package.json  supabase-schema.sql
frontend/components/invoice_display/: invoice_viewer.tsx
frontend/components/upload_form/: file_upload.tsx
frontend/configuration/: app_config.ts
frontend/pages/invoice_upload/: main_page.tsx
frontend/services/api_client/: invoice_api.ts
frontend/shared/types/: invoice_types.ts
frontend/src/app/: layout.tsx
frontend/src/app/(marketing)/: page.tsx
frontend/src/components/dashboard/: DashboardLayout.tsx
frontend/styles/: app.css
saas-frontend/: .env.local  .env.local.example  .gitignore
saas-frontend/src/: middleware.ts
saas-frontend/src/app/(dashboard)/: layout.tsx
saas-frontend/src/hooks/: useUser.ts
saas-frontend/src/types/: index.ts
scripts/: README.md  bench_paddle.py  clear_cache.py  debug_ocr.py  generate_token.py
src/: index.ts
src/api/: health.py
src/api/endpoints/: upload_and_parse.py
src/api/security/: jwt_auth.py
src/cache/: __init__.py  redis_cache.py
src/config/: settings.py
src/core/pipeline/: invoice_processor.py
src/core/pipeline/utils/: __init__.py  helpers.py
src/domain/corrections/: orchestrator.py
src/domain/corrections/strategies/: base.py  canary_tax_fixer.py  discount_detector.py  line_total_validator.py  subtotal_fixer.py  tax_validator.py  unit_price_validator.py
src/domain/models/: __init__.py  financial.py  invoice.py  item.py  party.py
src/domain/validation/: models.py  orchestrator.py
src/domain/validation/validators/: __init__.py  data_quality.py  math_validator.py  mathematical_validator.py  required_fields.py
src/services/ai/: gemini_processor.py
src/services/ai/gemini/: __init__.py  prompts.py  prompts_v2.py  prompts_v3.py
src/services/cache/: redis_repository.py
src/services/ocr/deepseek/: __init__.py  deepseek_processor.py
src/services/ocr/paddle/: __init__.py  config.py  image_handler.py  ocr_executor.py  processor.py  provider.py  text_detector.py
src/services/table_detection/: __init__.py  cell_text_matcher.py  hybrid_processor.py  processor.py  tatr_processor.py
src/utils/: document_utils.py
tests/: conftest.py  test_endpoint.py  test_utils_and_cli.py  test_validators.py
(+43 files in other folders)
