[tool.poetry]
name = "invoice-parsing"
version = "2.0.0"
description = "Automagically parse invoices and receipts with AI - TFG Edition (CPU)"
authors = ["Ignacio Angulo <nangulocouso@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Web Framework
fastapi = "^0.115.0"
uvicorn = { version = "^0.34.0", extras = ["standard"] }
gunicorn = "^23.0.0"

# Data Validation
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"

# Database & Caching
redis = "^5.2.0"

# Logging
loguru = "^0.7.3"

# Authentication
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
pyjwt = "^2.10.0"
fastapi-jwt = "^0.3.0"

# File Handling
python-multipart = "^0.0.20"
pillow = "^11.0.0"
pillow-heif = "^0.21.0"
pdf2image = "^1.17.0"
pypdf = "^5.1.0"

# AI - Gemini (using legacy SDK for code compatibility)
google-generativeai = "^0.8.6"

# OCR - PaddlePaddle CPU (PaddleOCR installed separately via pip --no-deps)
# Note: PaddleOCR 2.7.x has PyMuPDF dependency that fails on macOS ARM64
# Install paddleocr manually: pip install paddleocr==2.7.0.3 --no-deps
paddlepaddle = "2.6.2"

# Image Processing
numpy = ">=1.26.0,<2.0.0"
opencv-python-headless = "^4.10.0"

# Data Processing
pandas = "^2.2.0"

# Utilities
setuptools = "^75.0.0"

[tool.poetry.group.dev.dependencies]
# Development tools
rich = "^14.0.0"
python-dotenv = "^1.0.1"

# Testing
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"

# Testing & Debugging
email-validator = "^2.2.0"
httpx = "^0.28.0"

# Date handling
arrow = "^1.3.0"

# CLI tools
typer = { version = "^0.15.0", extras = ["all"] }

# Note: gradio removed due to pymupdf compilation issues on macOS
# Use FastAPI's built-in /docs for interactive testing instead

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportPrivateImportUsage = "none"
pythonVersion = "3.12"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
