[project]
name = "invoice-parsing"
version = "1.0.1"
description = "Automagically parse invoices and receipts with AI."
# readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn>=0.30.0",
    "gunicorn>=21.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "redis>=5.0.0",
    "loguru>=0.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "google-generativeai>=0.7.0",
    "pillow>=10.5.0",
    "paddleocr==2.7.3",
    "paddlepaddle==2.6.0",
    "opencv-python-headless>=4.8.0",
    "pdf2image>=1.17.0",
    "instructor>=1.3.0",
    "openvino>=2024.0.0",
    "fastapi-jwt[authlib]>=0.3.0",
    "pyjwt>=2.10.1",
    "pypdf>=3.0.1",
    "setuptools>=65.0.0",
]

[project.optional-dependencies]
dev = [
    "rich>=14.0.0",
    "pydantic>=2.10.2",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "transformers==4.36.2",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pymupdf>=1.23.0",
    "paddlepaddle==2.6.0",
    "paddleocr==2.7.3",
    "email-validator>=2.0.0",
    #    "invoice-parsing",
    "fastapi>=0.115.6",
    "pydantic-settings>=2.10.0",
    "uvicorn>=0.32.1",
    "loguru>=0.7.2",
    "python-multipart>=0.0.19",
    "iso4217>=1.14.20250512",
    "python-jose[cryptography]>=3.3.0",
    "pypdf>=3.0.1",
    "arrow>=1.3.0",
    "scalar-fastapi>=1.0.3",
    "redis>=5.0.0",
    "gradio>=5.34.2",
    "google-genai[aiohttp]>=1.21.1",
    "fastapi-jwt[authlib]>=0.3.0",
    "python-dotenv>=1.0.0",
    "cloudflare>=3.0.0",
    "typer[rich]>=0.12.3",
    "opencv-python-headless>=4.8.0",
    "pyzbar>=0.1.9",
    "qrcode[pil]>=7.4.2",
    "aiohttp>=3.9.0",
    "reportlab>=4.0.0",
    "pyjwt>=2.10.1",
    "google-generativeai>=0.8.5",
    "huggingface-hub>=0.26.0",
]

[tool.pdm.build]
includes = ["app", "app/parser", "app/rest"]

[tool.uv.sources]
invoice-parsing = { workspace = true }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
reportPrivateImportUsage = "none"
