[tool.poetry]
name = "invoice-parsing"
version = "1.0.1"
description = "Automagically parse invoices and receipts with AI."
authors = ["Ignacio Angulo <nangulocouso@gmail.com>"]
readme = "../README.md"
packages = [
    { include = "api" },
    { include = "configuration" },
    { include = "invoice_processing" },
]

[tool.poetry.dependencies]
python = "~=3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
gunicorn = "^21.0.0"
pydantic = "^2.10.2"
pydantic-settings = "^2.10.0"
redis = "^5.0.0"
loguru = "^0.7.2"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-multipart = "^0.0.19"
google-generativeai = "^0.8.5"
pillow = "^10.0.0"
pillow-heif = "^0.18.0"
paddleocr = "2.7.3"
paddlepaddle = "2.6.0"
numpy = "~=1.26.4"
opencv-python-headless = "~=4.8.1"
pdf2image = "^1.17.0"
instructor = "^1.3.0"
openvino = "^2024.0.0"
fastapi-jwt = { version = "^0.3.0", extras = ["authlib"] }
pyjwt = "^2.10.1"
pypdf = "^3.17.4"
setuptools = "^70.0.0"
pandas = "~=2.1.4"

[tool.poetry.group.dev.dependencies]
rich = "^14.0.0"
pydantic = "^2.10.2"
pdf2image = "^1.17.0"
pillow = "^10.0.0"
numpy = "~=1.26.4"
transformers = "4.36.2"
torch = "^2.4.0"
torchvision = "^0.19.0"
pymupdf = "^1.23.0"
paddlepaddle = "2.6.0"
paddleocr = "2.7.3"
email-validator = "^2.0.0"
fastapi = "^0.115.6"
pydantic-settings = "^2.10.0"
uvicorn = "^0.32.1"
loguru = "^0.7.2"
python-multipart = "^0.0.19"
iso4217 = "^1.14.20250512"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
pypdf = "^3.17.4"
arrow = "^1.3.0"
scalar-fastapi = "^1.0.3"
redis = "^5.0.0"
gradio = "^5.34.2"
google-genai = { version = "^1.21.1", extras = ["aiohttp"] }
fastapi-jwt = { version = "^0.3.0", extras = ["authlib"] }
python-dotenv = "^1.0.0"
cloudflare = "^3.0.0"
typer = { version = "^0.12.3", extras = ["rich"] }
opencv-python-headless = "~=4.8.1"
pyzbar = "^0.1.9"
qrcode = { version = "^7.4.2", extras = ["pil"] }
aiohttp = "^3.9.0"
reportlab = "^4.0.0"
pyjwt = "^2.10.1"
google-generativeai = "^0.8.5"
huggingface-hub = "^0.28.1"
pandas = "~=2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportPrivateImportUsage = "none"
